# candidate-transfer

./: README.md  pyproject.toml  requirements.txt
config/: custom_output.json
data/sample_inputs/: ats_candidates.json  github_mock_CAND-001.json  github_mock_CAND-002.json  notes_CAND-001.txt  notes_CAND-002.txt  recruiter_export.csv
data/sample_outputs/: custom_profiles.json  default_profiles.json
src/candidate_transformer/: __init__.py  cli.py  merger.py  models.py  pipeline.py  projector.py  validator.py
src/candidate_transformer/normalizers/: __init__.py  phone.py  skills.py  text.py
src/candidate_transformer/parsers/: __init__.py  ats_parser.py  csv_parser.py  github_parser.py  notes_parser.py
tests/: __init__.py  test_transformer.py
