[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Multi-source candidate data transformer for Eightfold assignment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "phonenumbers>=8.13.0",
    "python-dateutil>=2.8.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[project.scripts]
candidate-transformer = "candidate_transformer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
